--- a/src/components/RestaurantCard.css
+++ b/src/components/RestaurantCard.css
@@ -18,7 +18,9 @@
 
 .restaurant-slides {
   width: 100%;
-  height: 100%;
+  height: 350px;
+  overflow: hidden;
+  position: relative;
 }
 
 .restaurant-image {
@@ -28,16 +30,16 @@
 }
 
 /* Swiper pagination styling */
-.restaurant-image-slider-container .swiper-pagination {
+.restaurant-slides .swiper-pagination {
   bottom: 10px !important;
 }
 
-.restaurant-image-slider-container .swiper-pagination-bullet {
+.restaurant-slides .swiper-pagination-bullet {
   background: var(--ion-color-light); /* Light color for visibility on images */
   opacity: 0.8;
 }
 
-.restaurant-image-slider-container .swiper-pagination-bullet-active {
+.restaurant-slides .swiper-pagination-bullet-active {
   background: var(--ion-color-light);
   opacity: 1;
 }
